tests/ui/fn/fn-closure-mutable-capture.stderr
error[E0594]: cannot assign to `x`, as it is a captured variable in a `Fn` closure
  --> $DIR/fn-closure-mutable-capture.rs:5:17
   |
LL | pub fn bar<F: Fn()>(_f: F) {}
   |                         - change this to accept `FnMut` instead of `Fn`
...
LL |     bar(move || x = 1);
   |     --- ------- ^^^^^ cannot assign
   |     |   |
   |     |   in this closure
   |     expects `Fn` instead of `FnMut`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.
